Update visualization config

--- a/tools/vis_configs/dota1_0/config.json
+++ b/tools/vis_configs/dota1_0/config.json
@@ -1,8 +1,8 @@
 {
     "load_type": "dota_submission",
-    "img_dir": "path/to/dota/submission/image",
-    "ann_dir": "path/to/dota/submission/labelTxt",
-    "classes": null,
+    "img_dir": "data/DOTA1_0/submission/image",
+    "ann_dir": "dota/DOTA1_0/submission/labelTxt",
+    "classes": "dota1.0",
     "prior_annfile": null,
     "merge_type": "addition",
     "load_nproc": 10,
@@ -11,14 +11,14 @@
     "random_vis": false,
     "ids": null,
     "show_off": true,
-    "save_dir": "path/to/your/saveing/dir",
+    "save_dir": "data/submission/visualization",
     "vis_nproc": 10,
 
     "shown_btype": null,
-    "shown_names": null,
+    "shown_names": "./vis_configs/dota1_0/short_names.txt",
     "score_thr": 0.2,
-    "colors": "green",
-    "thickness": 1.0,
+    "colors": "./vis_configs/dota1_0/colors.txt",
+    "thickness": 2.0,
     "text_off": false,
     "font_size": 10,
     "wait_time": 0
