--- a/tools/vis_configs/hrsc/config.json
+++ b/tools/vis_configs/hrsc/config.json
@@ -1,8 +1,8 @@
 {
-    "load_type": "dota_submission",
-    "img_dir": "data/DOTA1_0/submission/image",
-    "ann_dir": "data/DOTA1_0/submission/labelTxt",
-    "classes": "dota1.0",
+    "load_type": "pkl",
+    "img_dir": "data/HRSC/test/image",
+    "ann_dir": "data/HRSC/test/pkl",
+    "classes": "dior",
     "prior_annfile": null,
     "merge_type": "addition",
     "load_nproc": 10,
@@ -11,13 +11,13 @@
     "random_vis": false,
     "ids": null,
     "show_off": true,
-    "save_dir": "data/submission/visualization",
+    "save_dir": "data/HRSC/test/visualization",
     "vis_nproc": 10,
 
     "shown_btype": null,
-    "shown_names": "./vis_configs/dota1_0/short_names.txt",
+    "shown_names": "./vis_configs/hrsc/short_names.txt",
     "score_thr": 0.2,
-    "colors": "./vis_configs/dota1_0/colors.txt",
+    "colors": "green",
     "thickness": 3.0,
     "text_off": false,
     "font_size": 10,
